# GameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  run.sh
Libraries/GLFW/src/: mappings.h
Libraries/assimp/code/AssetLib/IFC/: IFCLoader.cpp
Libraries/include/glad/: glad.c  glad.h
Libraries/libsndfile/src/: create_symbols_file.py
res/shaders/: light_cube.frag  light_cube.vert  shader.frag  shader.vert
res/shaders/cubemap/: cm.frag  cm.vert
res/shaders/lighting/: fb.frag  light_cube.vert  shader.frag  shader.vert
res/shaders/modeling/: cube.vert  model.frag  model.vert  utilities.frag  utilities.vert
res/shaders/test/: fb.frag
src/: Application.cpp  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  Globals.h  Icon.h  Includes.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SoundEngine.cpp  SoundEngine.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Vertices.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
